--- a/ms-auth/src/main/resources/application.properties
+++ b/ms-auth/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+# Estas son configuraciones típicas que podrías necesitar para un servicio PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
