--- a/ms-auth/src/main/resources/application.properties
+++ b/ms-auth/src/main/resources/application.properties
@@ -3,7 +3,17 @@ spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # Estas son configuraciones típicas que podrías necesitar para un servicio PostgreSQL
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+#DB config
+spring.jpa.database = postgresql
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = none
+
+spring.datasource.dbcp2.driver-class-name= org.postgresql.Driver
+
+# swagger config
+springdoc.swagger-ui.path=/docs/swagger-ui.html
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+
+api.docs.endpoint=http://localhost:8080/
+api.docs.env=MS-AUTH-DEV
