feat(ms-franchise) Add Main Operation

--- a/.env
+++ b/.env
@@ -1,7 +1,13 @@
 # Database Configuration
-POSTGRES_DB=msauth
-POSTGRES_USER=msauth
-POSTGRES_PASSWORD=msauth
+POSTGRES_DB_AUTH=msauth
+POSTGRES_USER_AUTH=msauth
+POSTGRES_PASSWORD_AUTH=msauth
+
+# Database Configuration
+POSTGRES_DB_FRAN=msfran
+POSTGRES_USER_FRAN=msfran
+POSTGRES_PASSWORD_FRAN=msfran
+
 
 # Spring Boot Configuration
 SPRING_DATASOURCE_URL=jdbc:postgresql://db-ms-auth:5432/msauth
