--- a/ms-auth/src/main/resources/application.properties
+++ b/ms-auth/src/main/resources/application.properties
@@ -1,19 +1,17 @@
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5433/msauth
+spring.datasource.username=msauth
+spring.datasource.password=msauth
 
-# Estas son configuraciones típicas que podrías necesitar para un servicio PostgreSQL
-#DB config
 spring.jpa.database=postgresql
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
 
-# swagger config
 springdoc.swagger-ui.path=/docs/swagger-ui.html
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 
-api.docs.endpoint=http://localhost:8080/
+api.docs.endpoint=http://localhost:8081/
 api.docs.env=MS-AUTH-DEV
+server.port=8081
