--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,41 +62,27 @@ services:
       - main-network
 
 
-  #kong-database:
-  #  image: postgres:13
-  #  environment:
-  #    POSTGRES_USER: kong
-  #    POSTGRES_PASSWORD: kong
-  #    POSTGRES_DB: kong
-  #  volumes:
-  #    - kong-data:/var/lib/postgresql/data
-
-  #kong:
-  #  image: kong:latest
-  #  depends_on:
-  #    - kong-database
-  #  environment:
-  #    KONG_DATABASE: postgres
-  #    KONG_PG_HOST: kong-database
-  #    KONG_PG_USER: kong
-  #    KONG_PG_PASSWORD: kong
-  #  ports:
-  #    - "8000:8000" # Proxy port
-  #    - "8001:8001" # Admin API
-  #    - "8443:8443" # Proxy HTTPS port
-  #    - "8444:8444" # Admin API HTTPS
-
-  #konga:
-  #  image: pantsel/konga:latest
-  #  platform: linux/x86_64
-  #  environment:
-  #    - NODE_ENV=production
-  #  ports:
-  #    - "1337:1337"
-  #  depends_on:
-  #    - kong
-  #  networks:
-  #    - main-network
+  kong-dbless:
+    image: kong:3.4.2
+    container_name: kong-dbless
+    volumes:
+      - ./kong.yml:/kong/declarative/kong.yml
+    environment:
+      KONG_DATABASE: off
+      KONG_DECLARATIVE_CONFIG: /kong/declarative/kong.yml
+      KONG_PROXY_ACCESS_LOG: /dev/stdout
+      KONG_ADMIN_ACCESS_LOG: /dev/stdout
+      KONG_PROXY_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_ERROR_LOG: /dev/stderr
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+      KONG_ADMIN_GUI_URL: "http://localhost:8002"
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8001:8001"
+      - "8444:8444"
+    networks:
+      - main-network
 
 networks:
   main-network:
@@ -105,4 +91,3 @@ networks:
 volumes:
   db-auth:
   db-fran:
-  #kong-data:
